--- a/app/index_v2.html
+++ b/app/index_v2.html
@@ -35,7 +35,8 @@
   </head>
   
     <body ng-app="shmcc_app">
-        <p align="center" ng-if="!isAuthenticated">
+        <!--<p align="center" ng-if="!isAuthenticated">-->
+        <p align="center" >
             <img src="./images/Title.jpg" alt="SHMCC诺西PS网元管理系统" >
         </p>
         
