--- a/app/index_main_v2.html
+++ b/app/index_main_v2.html
@@ -59,7 +59,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li><a id='kpi_page' href="index_kpi_v2.html">指标及告警查询</a></li>
 						<li><a id='traffica_page' href="index_traffica_v2.html">用户通话记录查询</a></li>
 						<li><a href="vuejs/dist/index.html">用户话单查询</a></li>
-						<li><a href="menu.html">故障报告</a></li>
+						<li><a href="angular/index.html">故障报告</a></li>
 						<li><a href="contact.html">其他功能</a></li>
 					  </ul>
 					</div><!-- /.navbar-collapse -->
