--- a/app/index_traffica_v2.html
+++ b/app/index_traffica_v2.html
@@ -43,7 +43,7 @@
 					<div class="collapse navbar-collapse nav-wil" id="bs-example-navbar-collapse-1">
 					 <ul class="nav navbar-nav">
 						<li><a id='kpi_page' href="index_kpi_v2.html">指标及告警查询</a></li>
-						<li><a id='traffica_page' href="index_traffica_v2.html">用户通话记录查询</a></li>
+						<li><a id='traffica_page' href="#">用户通话记录查询</a></li>
 						<li><a href="vuejs/dist/index.html">用户话单查询</a></li>
 						<li><a href="#">故障报告(空)</a></li>
 						<li><a href="angular/index.html">其他功能</a></li>
