commit after several times reinstall computer

--- a/app/index_v2.html
+++ b/app/index_v2.html
@@ -26,8 +26,8 @@
     div
         {
             border:1px;
-            border-radius:12px;
-            /*-moz-border-radius:25px;  Old Firefox */
+            /*border-radius:12px;
+            -moz-border-radius:25px;  Old Firefox */
         }
     #greeting
     {
