--- a/app/index_kpi_v2.html
+++ b/app/index_kpi_v2.html
@@ -28,11 +28,13 @@
             border-radius: 6px; 
             /*-moz-border-radius:25px;  Old Firefox */
         }
+    /*
     #greeting
     {
         color:#404046;
         margin: 20px
     }
+    */
   </style>
   
   </head>
@@ -53,11 +55,12 @@
         
         <a href="index_v2.html">首页</a>
         -->
-        <div class="container col-lg-12" >
+        <div class="col-lg-12" >
             <div class="row">    
                     <!-- <div class="col-lg-10 col-lg-offset-1">
                     -->
-                    <div class="col-lg-12"></div>    <ng-include src="'partials/shmccps_main.html'">
+                    <div class="col-lg-12">
+                        <ng-include src="'partials/shmccps_main.html'">
 		                </ng-include>
                     </div>
             </div>
