--- a/app/index_main_v2.html
+++ b/app/index_main_v2.html
@@ -115,7 +115,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <b class="caret"></b>
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a href="javascript:void(0);" onclick="window.open('/epc-ices/')">MAC系统</a></li>
+                                <li><a href="javascript:void(0);" onclick="window.open('/epc-ices/login')">MAC系统</a></li>
                                 <li><a href="javascript:void(0);" onclick="redirect('/angular/index.html?page=operation')">其他功能</a></li>
                             </ul>
                         </li>
