--- a/app/index_v2.html
+++ b/app/index_v2.html
@@ -62,7 +62,7 @@
                 style="height: 300px; width: 100%; align-content: center " >
         </p>
         
-        <div class="container col-lg-12" >
+        <div class="container-fluid col-lg-12" >
                 
             <div class="row">    
                     <div class="col-lg-12" ng-view>
