--- a/app/index_main_v2.html
+++ b/app/index_main_v2.html
@@ -33,6 +33,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </script>
 <!-- //FlexSlider -->
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
+<!--<style>
+    @media screen and (max-width: 600px) { 
+
+</style>
+-->
 </head>
 	
 <body>
