--- a/app/index_v2.html
+++ b/app/index_v2.html
@@ -43,7 +43,7 @@
     .float_layer .close { width: 21px; height: 20px; background: url(http://www.srcfans.com/jscode/img/201105/close.gif) no-repeat 0 bottom; position: absolute; top: 2px; right: 3px; }
     .float_layer .close:hover { background: url(http://www.srcfans.com/jscode/img/201105/close.gif) no-repeat 0 0; }
     .float_layer .content { height: 200px; overflow: hidden; font-size: 14px; line-height: 18px; color: #666; text-indent: 28px; }
-    .float_layer .wrap { padding: 10px; }
+    .float_layer .wrap { padding: 2px; }
   
     .scrollDiv{height:25px;font-size:10px;/* 必要元素 */line-height:25px;border:#ccc 1px solid;overflow:hidden;/* 必要元素 */}
     .scrollDiv li{height:25px;font-size:10px;padding-left:2px;text-indent:5px;overflow:hidden;}
@@ -58,8 +58,8 @@
             
         <p align="center" ng-if="!isAuthenticated">
         <!--<p align="center" >-->
-            <img src="./images/Title_3.jpg" alt="SHMCC诺西PS网元管理系统" 
-                style="height: 300px; width: 100%; align-content: center " >
+            <img src="./images/Title_1.jpg" alt="SHMCC诺西PS网元管理系统" 
+                style="width: 100%; align-content: center " >
         </p>
         
         <div class="container-fluid col-lg-12" >
