add rtm grafana page link

--- a/app/index_main_v2.html
+++ b/app/index_main_v2.html
@@ -130,6 +130,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <li>
                                     <a href="javascript:void(0);" onclick="window.open('/epc-ices/login')">MAC系统</a>
                                 </li>
+                                <li>
+                                    <a href="javascript:void(0);" onclick="window.open('/shmcc_rtm')">RTM系统</a>
+                                </li>
+                                <li>
+                                    <a href="javascript:void(0);" onclick="window.open('/shmcc_grafana')">实时监控(Grafana)系统</a>
+                                </li>
                                 <div class="divider"></div>
                                 <li><a href="javascript:void(0);" onclick="redirect('/angular/index.html?page=operation')">其他功能</a></li>
                             </ul>
