--- a/app/index_v2.html
+++ b/app/index_v2.html
@@ -116,7 +116,7 @@
 
         <script src="bower_components/chart.js/dist/Chart.min.js"></script>
         <script src="bower_components/angular-chart.js/dist/angular-chart.js"></script>
-
+        <script src="static/js/environment_config.js"> </script>
          <!--
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
