modify menu for external webpage

--- a/app/index_main_v2.html
+++ b/app/index_main_v2.html
@@ -130,7 +130,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             </a>
                             <ul id="externalpage" class="dropdown-menu">
                                 <li>
-                                    <a href="javascript:void(0);" onclick="window.open('/epc-ices/login')">MAC系统</a>
+                                    <!--<a href="javascript:void(0);" onclick="window.open('/epc-ices/login')">MAC系统</a>-->
+                                    <a href="javascript:void(0);" onclick="openNewSite('MAC')">MAC系统</a>
                                 </li>
                                 <div class="divider"></div>
                                 <li>
