modify menu for external webpage

--- a/app/index_main_v2.html
+++ b/app/index_main_v2.html
@@ -131,14 +131,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <ul id="externalpage" class="dropdown-menu">
                                 <li>
                                     <!--<a href="javascript:void(0);" onclick="window.open('/epc-ices/login')">MAC系统</a>-->
-                                    <a href="javascript:void(0);" onclick="openNewSite('MAC')">MAC系统</a>
+                                    <a href="javascript:void(0);" onclick="openNewSite('MAC', 'window')">MAC系统</a>
                                 </li>
                                 <div class="divider"></div>
                                 <li>
-                                    <a href="javascript:void(0);" onclick="openNewSite('RTM')">RTM系统</a>
+                                    <a href="javascript:void(0);" onclick="openNewSite('RTM', 'iframe')">RTM系统</a>
                                 </li>
                                 <li>
-                                    <a href="javascript:void(0);" onclick="openNewSite('GRAFANA')">实时监控(Grafana)系统</a>
+                                    <a href="javascript:void(0);" onclick="openNewSite('GRAFANA', 'iframe')">实时监控(Grafana)系统</a>
                                 </li>
                                 <div class="divider"></div>
                                 <li><a href="javascript:void(0);" onclick="redirect('/angular/index.html?page=operation')">其他功能</a></li>
