modify menu for external webpage

--- a/app/index_main_v2.html
+++ b/app/index_main_v2.html
@@ -141,6 +141,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                     <a href="javascript:void(0);" onclick="openNewSite('GRAFANA', 'iframe')">实时监控(Grafana)系统</a>
                                 </li>
                                 <div class="divider"></div>
+                                <li>
+                                    <a href="javascript:void(0);" onclick="openNewSite('OldReportSuite', 'iframe')">RTM系统</a>
+                                </li>
+                                <li>
+                                    <a href="javascript:void(0);" onclick="openNewSite('NewReportSuite', 'iframe')">实时监控(Grafana)系统</a>
+                                </li>
+                                <div class="divider"></div>
                                 <li><a href="javascript:void(0);" onclick="redirect('/angular/index.html?page=operation')">其他功能</a></li>
                             </ul>
                         </li>
