--- a/app/index_main_v2.html
+++ b/app/index_main_v2.html
@@ -142,10 +142,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 </li>
                                 <div class="divider"></div>
                                 <li>
-                                    <a href="javascript:void(0);" onclick="openNewSite('OldReportSuite', 'iframe')">ReportSuite系统 (MME/SAEGW)</a>
+                                    <a href="javascript:void(0);" onclick="openNewSite('OldReportSuite', 'window')">ReportSuite系统 (MME/SAEGW)</a>
                                 </li>
                                 <li>
-                                    <a href="javascript:void(0);" onclick="openNewSite('NewReportSuite', 'iframe')">ReportSuite系统 (CMG)</a>
+                                    <a href="javascript:void(0);" onclick="openNewSite('NewReportSuite', 'window')">ReportSuite系统 (CMG)</a>
                                 </li>
                                 <div class="divider"></div>
                                 <li><a href="javascript:void(0);" onclick="redirect('/angular/index.html?page=operation')">其他功能</a></li>
