add menu for auto inspection

--- a/app/index_main_v2.html
+++ b/app/index_main_v2.html
@@ -140,6 +140,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <li>
                                     <a href="javascript:void(0);" onclick="openNewSite('GRAFANA', 'iframe')">实时监控(Grafana)系统</a>
                                 </li>
+                                <li>
+                                    <a href="javascript:void(0);" onclick="openNewSite('INSPECTION', 'iframe')">自动巡检系统</a>
+                                </li>
                                 <div class="divider"></div>
                                 <li>
                                     <a href="javascript:void(0);" onclick="openNewSite('OldReportSuite', 'window')">ReportSuite系统 (MME/SAEGW)</a>
